tests/expectations/compiler/integers/i128/max_fail.out
Error [ETYC0372008]: The value 170141183460469231731687303715884105728 is not a valid `i128`
    --> compiler-test:4:23
     |
   4 |         let a: i128 = 170141183460469231731687303715884105728i128;
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
